--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,8 @@ agp = "8.4.0"
 annotation = "1.8.0"
 cameraView = "1.3.3"
 circleimageview = "3.1.0"
+constraintlayoutVersion = "2.2.0-alpha13"
+constraintlayoutCompose = "1.1.0-alpha13"
 coreSplashscreen = "1.0.1"
 converterGson = "2.10.0"
 coreTesting = "2.2.0"
@@ -44,6 +46,8 @@ viewpager2 = "1.1.0"
 
 [libraries]
 androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraView" }
+androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
+androidx-constraintlayout-v220alpha13 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraView" }
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
