--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,25 @@
 [versions]
-agp = "8.4.0"
+agp = "8.4.1"
 annotation = "1.8.0"
-cameraView = "1.3.3"
 circleimageview = "3.1.0"
-constraintlayoutVersion = "2.2.0-alpha13"
+cameraView = "1.3.3"
+converterGson = "2.11.0"
 constraintlayoutCompose = "1.1.0-alpha13"
-coreSplashscreen = "1.0.1"
-converterGson = "2.10.0"
 coreTesting = "2.2.0"
 datastorePreferences = "1.1.1"
-fragmentKtx = "1.7.1"
+design = "28.0.0"
 glide = "4.16.0"
+junitJupiter = "5.10.2"
 koinCore = "3.5.6"
 koinAndroid = "3.5.6"
 kotlin = "1.9.23"
 coreKtx = "1.13.1"
+coreSplashscreen = "1.0.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 appcompat = "1.6.1"
-kotlinxCoroutinesTest = "1.8.0"
+kotlinxCoroutinesTest = "1.8.1"
 lifecycleViewmodelKtx = "2.8.0"
 loggingInterceptor = "4.12.0"
 material = "1.12.0"
@@ -30,26 +30,36 @@ mockitoCore = "5.11.0"
 mockitoInline = "5.2.0"
 mockitoJunitJupiter = "5.11.0"
 mockitoKotlin = "4.0.0"
+mockk = "1.13.11"
 navigationUiKtx = "2.7.7"
+pagingCommon = "3.3.0"
 pagingRuntimeKtx = "3.3.0"
 playServicesLocation = "21.2.0"
 playServicesMaps = "18.2.0"
 roomPaging = "2.6.1"
 runner = "1.5.2"
 swiperefreshlayout = "1.1.0"
-coreKtxVersion = "1.5.0"
-monitor = "1.6.1"
-shimmer = "0.5.0"
-googleAndroidLibrariesMapsplatformSecretsGradlePlugin = "2.0.1"
 cardview = "1.0.0"
+coreKtxVersion = "1.5.0"
+shimmer = "0.5.0"
+monitor = "1.6.1"
 viewpager2 = "1.1.0"
+googleAndroidLibrariesMapsplatformSecretsGradlePlugin = "2.0.1"
+coordinatorlayout = "1.2.0"
 
 [libraries]
-androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraView" }
+androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
+androidx-paging-common = { module = "androidx.paging:paging-common", version.ref = "pagingCommon" }
+androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
-androidx-constraintlayout-v220alpha13 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
-androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraView" }
 androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraView" }
+design = { module = "com.android.support:design", version.ref = "design" }
+kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+shimmer = { module = "com.facebook.shimmer:shimmer", version.ref = "shimmer" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
 androidx-core = { module = "androidx.test:core", version.ref = "coreKtxVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -70,16 +80,15 @@ androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "ro
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomPaging" }
 androidx-rules = { module = "androidx.test:rules", version.ref = "coreKtxVersion" }
 androidx-runner = { module = "androidx.test:runner", version.ref = "runner" }
-androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junitJupiter" }
+junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junitJupiter" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiter" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
-circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
-shimmer = { module = "com.facebook.shimmer:shimmer", version.ref = "shimmer" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinCore" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
@@ -98,11 +107,11 @@ androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "s
 core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
 androidx-monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
 androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+androidx-coordinatorlayout = { group = "androidx.coordinatorlayout", name = "coordinatorlayout", version.ref = "coordinatorlayout" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 googleDevtoolsKsp = { id = "com.google.devtools.ksp", version.ref = "devtoolksp"}
 googleAndroidLibrariesMapsplatformSecretsGradlePlugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "googleAndroidLibrariesMapsplatformSecretsGradlePlugin" }
-
 
